--- a/.env
+++ b/.env
@@ -10,12 +10,6 @@ app.baseURL = http://localhost
 #app.baseURL=https://f5ee-113-161-160-9.ngrok-free.app/
 
 #--------------------------------------------------------------------
-# LICENSE
-#--------------------------------------------------------------------
-PURCHASE_CODE = 1234
-LICENSE_KEY = localhost-license
-
-#--------------------------------------------------------------------
 # COOKIE
 #--------------------------------------------------------------------  
-cookie.prefix = 'vr_'
+cookie.prefix = 'uni_news_'
